* Drawbridge instant death removed: drawbridges can only be destroyed by force
  bolts when closed, not open.
* Sokoban prizes moved to Mines End, making Sokoban much more optional.
* Nymph level moved into Town branch; Town shops are larger to compensate.
* Effect of skills on to-hit and damage raised in general.
* Slings now get damage bonuses from strength and enchantment.
* New `repeat_prefix` keymap and `repeat_num_auto` option for people accustomed
  to NetHack's classic number key movement scheme.
* Curses on armor, jewelry and eyewear are now revealed when they are worn
  instead of when trying to take them off.
* More messages for things that used to happen silently: uncontrolled
  teleportation, finding secret doors/corridors while searching, items becoming
  randomly cursed.
* Iron bars can be destroyed by acid or eaten by certain monsters.

Character
---------
* Resistances gained from corpses and crowning only provide partial protection,
  and resistances from your race/role or from worn equipment are immunities
  (based on L's partial resistance patch).  Exact partial resistance effects:
    - fire, cold, shock: half damage
    - sleep: half duration, doubled chance to awaken from combat
    - disintegration: 90% chance to resist
    - poison: half damage, having any protects against other effects
* Reflection no longer reflects breaths; disintegration breath is treated as a
  beam to prevent unfair deaths due to this change.  The breath graphic has been
  changed accordingly.
* Changes to skills:
    - Martial arts and bare-handed combat now get to-hit bonuses from skills
      just like weapons do (from SporkHack).
    - Allow 1-damage hits to still train relevant skills; in NetHack, hitting
      with a weapon at unskilled gives -2 to damage, so weapons that couldn't
      roll at least a 4 on damage wouldn't be trained at all!
    - Accelerate heavyshot skill training: hitting with a heavyshot weapon